--- a/worksheet-detail.html
+++ b/worksheet-detail.html
@@ -1711,6 +1711,189 @@
     "This worksheet helps students recognize different objects and determine whether they are living creatures or not. It encourages critical thinking and understanding of life sciences.",
           download: "#",
         },
+        {
+          id: 121,
+          title: "Balloon-Powered Car",
+          img: "images/121.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and race a car powered by balloons.",
+          description:
+    "In this STEAM challenge, students create a balloon-powered car using household materials. They explore concepts of forces, energy transfer, and motion as they test and race their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+          
+        },
+        {
+          id: 122,
+          title: "Fizzy Rocket",
+          img: "images/122.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a rocket powered by chemical reactions with a splash of art.",
+          description:
+    "In this STEAM challenge, students design and make a rocket powered by chemical reactions using household materials. They explore concepts of pressure, energy transfer, and chemical reactions as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 123,
+          title: "Balance the Shape",
+          img: "images/123.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a shape that can perfectly balance on a point.",
+          description:
+    "In this STEAM challenge, students design and make a shape that can perfectly balance on a point using household materials. They explore concepts of center of mass, symmetry, and gravity as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 124,
+          title: "Straw Pan Flute",
+          img: "images/124.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a pan flute completely out of straws that can play different notes.",
+          description:
+    "In this STEAM challenge, students design and make a pan flute completely out of straws that can play different notes using household materials. They explore concepts of vibrations, sound, and length as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 125,
+          title: "Marshmallow Toothpick Tower",
+          img: "images/125.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a tower made completely out of toothpicks and marshmallows.",
+          description:
+    "In this STEAM challenge, students design and make a tower made completely out of toothpicks and marshmallows and household materials. They explore concepts of structual integrity, stability, and structural engineering as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 126,
+          title: "Helicopter Paper Drop",
+          img: "images/126.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a paper helicopter and watch it spin as it falls through the air.",
+          description:
+    "In this STEAM challenge, students design and make a helicopter completely out of household materials. They explore concepts of aerodynamics, gravity, and air resistance as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 127,
+          title: "Balloon Zipline Racer",
+          img: "images/127.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a balloon zipline and watch it go down a string as the balloon releases air.",
+          description:
+    "In this STEAM challenge, students design and make a balloon zipline completely out of household materials. They explore concepts of forces, energy transfer, and motion as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 128,
+          title: "Straw Paper Rocket",
+          img: "images/128.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a straw paper rocket and watch it launch as you blow into a straw.",
+          description:
+    "In this STEAM challenge, students design and make a paper rocket completely out of household materials. They explore concepts of aerodynamics, propulsion, and air pressure as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 129,
+          title: "Straw Paper Rocket",
+          img: "images/129.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a balloon powered paper plate car and watch it launch as the balloon deflates.",
+          description:
+    "In this STEAM challenge, students design and make a balloon powered paper plate car completely out of household materials. They explore concepts of forces, energy transfer, and motion as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 130,
+          title: "Treasure Swing Pendulum",
+          img: "images/130.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a pendulum and watch how different factors affect the swing.",
+          description:
+    "In this STEAM challenge, students design and make a pendulum completely out of household materials. They explore concepts of gravity, motion, and energy transfer as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 131,
+          title: "Soap Powered Boat",
+          img: "images/131.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a soap powered boat and watch how physics propels it in water.",
+          description:
+    "In this STEAM challenge, students design and make a soap powered boat completely out of household materials. They explore concepts of surface tension, propulsion, and fluid dynamics as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 132,
+          title: "Egg Drop Challenge",
+          img: "images/132.png",
+          grades: ["Pre-K", "K", "1st", "2nd", "3rd", "4th", "5th", "6th", "7th", "8th"],
+          subjects: ["Technology", "Science", "Engineering", "Arts"],
+          games: [],
+          summary:
+            "Design and make a contraption to prevent an egg from breaking during a drop.",
+          description:
+    "In this STEAM challenge, students design and make an egg contraption completely out of household materials to stop it from breaking. They explore concepts of impact, energy transfer, and material properties as they test their creations. This is a fun way to integrate science and engineering in a hands-on task.",
+          download: "#",
+        },
+        {
+          id: 133,
+          title: "Santa Connect the Dot!",
+          img: "images/133.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 100 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 100. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
+        {
+          id: 134,
+          title: "Easter Connect the Dot!",
+          img: "images/134.png",
+          grades: ["Pre-K", "1st", "2nd", "3rd", "4th","5th", "6th", "7th", "8th"],
+          subjects: ["Arts", "Math"],
+          games: ["Connect the Dots"],
+          summary:
+            "Connect the dots from 1 to 45 to draw a cute character.",
+          description:
+            "This engaging worksheet helps young learners practice fundamental skills by connecting dots from 1 to 45. And as they draw, they'll see a charming and cute illustration.",
+          download: "#",
+        },
       ];
 
       createApp({
